# GTK-Learning

./: README
gtk-first-steps/buttons_and_windows/: .anjuta_sym_db.db  drawing  drawing.c  persistens-windows.c~  some-buttons  some-buttons.c
gtk-first-steps/buttons_and_windows/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-first-steps/buttons_and_windows/bildbetrachter/: .anjuta_sym_db.db  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/Debug/: Makefile  config.h  config.status  libtool
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/Debug/po/: Makefile  Makefile.in  POTFILES
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/Debug/src/: Makefile
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/Debug/src/.deps/: bildbetrachter-gtk.Po  main.Po
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gtk-first-steps/buttons_and_windows/bildbetrachter-gtk/src/: Makefile.am  Makefile.in  bildbetrachter-gtk.c  bildbetrachter-gtk.h  main.c  main.c~
gtk-first-steps/buttons_and_windows/bildbetrachter/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-first-steps/buttons_and_windows/bildbetrachter/Debug/: Makefile  config.h  config.status  libtool
gtk-first-steps/buttons_and_windows/bildbetrachter/Debug/src/: Makefile  bildbetrachter
gtk-first-steps/buttons_and_windows/bildbetrachter/Debug/src/.deps/: main.Po
gtk-first-steps/buttons_and_windows/bildbetrachter/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gtk-first-steps/buttons_and_windows/bildbetrachter/src/: Makefile.am  Makefile.in  main.c  main.c~
