dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(bildbetrachter, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC






LT_INIT



PKG_CHECK_MODULES(BILDBETRACHTER, [gtk+-3.0 ])




AC_OUTPUT([
Makefile
src/Makefile

])
